# BrilliantGraph

./: BrilliantGraph.sln
BrilliantGraph/: BrilliantGraph.h  BrilliantGraph.vcxproj  BrilliantGraph.vcxproj.filters
Tests/: CMakeLists.txt  Test.cpp  Tests.vcxproj  main.cpp
Tests/src/: AdjacencyListTest.cpp  MapInterfaceTest.cpp  SetInterfaceTest.cpp
include/: AdjacencyList.h  StorageGen.h
include/detail/: AdjacencyListImpl.h  MapInterface.h  SetInterface.h
